added localized default value XPATH_RESULTS

--- a/src/main/resources/org/adwmainz/da/extensions/askmore/resources/ArgumentTextBundle_de.properties
+++ b/src/main/resources/org/adwmainz/da/extensions/askmore/resources/ArgumentTextBundle_de.properties
@@ -4,3 +4,4 @@ COPIED_TO_CLIPBOARD=Die Auswahl wurde in die Zwischenablage kopiert
 ELEMENT_FOUND=Element gefunden
 EXECUTE_ACTION=Aktion ausführen
 NO_RESULT_MESSAGE=Die Aktion lieferte keine Ergebnisse
+XPATH_RESULTS=XPath-Suchergebnisse
