added proper InputDialogCLosedException handling

--- a/src/main/resources/org/adwmainz/da/extensions/askmore/resources/DialogTextBundle_de.properties
+++ b/src/main/resources/org/adwmainz/da/extensions/askmore/resources/DialogTextBundle_de.properties
@@ -1,4 +1,5 @@
 ADD_ITEM=Element hinzufügen
 CANCEL=Abbrechen
+INPUT_DIALOG_CLOSED=Der Inputdialog wurde geschlossen
 NO_ADDITION=Es wurde kein Element hinzugefügt
 OK=OK
